VariableArityMethods/Code3_error_report.txt
javac errors for Code3.java 
Code3.java:19: error: reference to process is ambiguous
        process();
        ^
  both method process(Double...) in Code3 and method process(double...) in Code3 match
1 error
 
========================= 
ExtendJ errors for Code3.java 
 
========================= 
Eclipse ECJ errors for Code3.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\VariableArityMethods\Code3.java (at line 19)
	process();
	^^^^^^^
The method process(Integer[]) is ambiguous for the type Code3
----------
1 problem (1 error)
